--- a/.gitignore
+++ b/.gitignore
@@ -122,6 +122,7 @@ celerybeat.pid
 *.sage.py
 
 # Environments
+Setup/.env
 .env
 .venv
 env/
@@ -163,3 +164,6 @@ cython_debug/
 
 Buffer/
 Buffer/*
+setup_aoc/
+setup_aoc/*
+
